@@ -1,5 +1,6 @@
 cm4all-workshop (1.0.3) unstable; urgency=low
 
+  * queue: allow startup without database connection
   * build with GLib
 
  --
